[gd_scene load_steps=7 format=2]

[ext_resource path="res://Console_miniGame.gd" type="Script" id=1]
[ext_resource path="res://res/images/console.png" type="Texture" id=2]
[ext_resource path="res://res/images/console_barry.png" type="Texture" id=3]
[ext_resource path="res://buttons.gd" type="Script" id=4]
[ext_resource path="res://res/music/Katyusha.ogg" type="AudioStream" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]

[node name="Console" type="Node"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Background" type="Sprite" parent="Node2D"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="barry" type="Sprite" parent="Node2D"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="buttons" type="Area2D" parent="."]
position = Vector2( 412.813, 102.1 )
script = ExtResource( 4 )

[node name="Katyusha" type="AudioStreamPlayer" parent="buttons"]
stream = ExtResource( 5 )

[node name="topLeft" type="CollisionPolygon2D" parent="buttons"]
position = Vector2( 208.074, -19.1332 )
polygon = PoolVector2Array( -5.00635, 3.51185, -18.4418, 179.099, 175.214, 180.952, 182.163, 4.90173 )

[node name="icon" type="Sprite" parent="buttons/topLeft"]
modulate = Color( 0.705882, 0.862745, 0.478431, 1 )
position = Vector2( 86.6299, 83.9043 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="topMiddle" type="CollisionPolygon2D" parent="buttons"]
editor/display_folded = true
position = Vector2( 432.472, 109.916 )
polygon = PoolVector2Array( 26.1565, -14.443, 23.5157, 173.931, 224.653, 174.371, 219.812, -11.8022 )

[node name="icon2" type="Sprite" parent="buttons/topMiddle"]
modulate = Color( 0, 0.133333, 1, 1 )
position = Vector2( 110.861, 72.7481 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="topRight" type="CollisionPolygon2D" parent="buttons"]
editor/display_folded = true
position = Vector2( 739.736, -11.6962 )
polygon = PoolVector2Array( -19.233, -0.662224, -12.1909, 177.149, 179.264, 175.829, 162.979, 2.85879 )

[node name="icon" type="Sprite" parent="buttons/topRight"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 72.6088, 82.758 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="botLeft" type="CollisionPolygon2D" parent="buttons"]
editor/display_folded = true
position = Vector2( 196.133, 224.22 )
polygon = PoolVector2Array( -24.1052, 183.144, 177.89, 184.533, 184.376, -9.12228, -9.74329, -10.9753 )

[node name="icon" type="Sprite" parent="buttons/botLeft"]
modulate = Color( 1, 0, 0.890196, 1 )
position = Vector2( 80.4834, 88.901 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="botMiddle" type="CollisionPolygon2D" parent="buttons"]
position = Vector2( 438.683, 542.31 )
polygon = PoolVector2Array( -16.6625, -6.55261, -21.3064, 181.195, 262.638, 181.859, 257.33, -4.56235, 76.8798, -5.88919 )

[node name="icon" type="Sprite" parent="buttons/botMiddle"]
modulate = Color( 0.180392, 0.305882, 0.188235, 1 )
position = Vector2( 116.168, 87.3937 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="botRight" type="CollisionPolygon2D" parent="buttons"]
<<<<<<< Updated upstream
editor/display_folded = true
position = Vector2( 758.05, 224.883 )
polygon = PoolVector2Array( -29.1843, -10.1359, -22.1423, 184.84, 177.056, 181.859, 163.151, -10.1359 )
=======
position = Vector2( 549.976, 236.841 )
polygon = PoolVector2Array( -27.2772, 5.38895, -21.3064, 181.195, 177.056, 181.859, 159.807, -5.88919, -25.9504, -6.55261 )
>>>>>>> Stashed changes

[node name="icon" type="Sprite" parent="buttons/botRight"]
position = Vector2( 65.7307, 89.7449 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ConsoleScreen" type="HSplitContainer" parent="Control"]
margin_left = 581.827
margin_top = 569.208
margin_right = 1469.83
margin_bottom = 983.208
rect_scale = Vector2( 0.84, 1 )

[node name="TextScroll" type="VBoxContainer" parent="Control/ConsoleScreen"]
margin_bottom = 414.0

[node name="VSeparator" type="VSeparator" parent="Control/ConsoleScreen"]
margin_left = 12.0
margin_right = 888.0
margin_bottom = 414.0

[node name="Levers" type="VBoxContainer" parent="Control/ConsoleScreen"]
margin_left = 16.0
margin_right = 888.0
margin_bottom = 414.0

[node name="CheckBox" type="CheckBox" parent="Control/ConsoleScreen/Levers"]
margin_right = 872.0
margin_bottom = 25.0
[connection signal="input_event" from="buttons" to="buttons" method="_on_buttons_input_event" flags=3]
